[gd_scene load_steps=4 format=3 uid="uid://dp3vfby37ujd1"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_odmeu"]

[sub_resource type="Curve" id="Curve_j4xls"]

[sub_resource type="CurveTexture" id="CurveTexture_b4dlk"]
curve = SubResource("Curve_j4xls")

[node name="PauseMenu" type="Control"]
visible = false
top_level = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
script = ExtResource("1_odmeu")

[node name="Background" type="CanvasLayer" parent="."]
layer = 0
visible = false

[node name="TextureRect" type="TextureRect" parent="Background"]
self_modulate = Color(1, 1, 1, 0.215686)
top_level = true
offset_right = 256.0
offset_bottom = 256.0
texture = SubResource("CurveTexture_b4dlk")

[node name="MenuLayer" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLayer"]
offset_left = 64.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 206.0

[node name="RichTextLabel" type="RichTextLabel" parent="MenuLayer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(64, 20)
layout_mode = 2
bbcode_enabled = true
text = "[center]PAUSE"
scroll_active = false

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuLayer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MenuLayer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CONTIUNUE"

[node name="QuitButton" type="Button" parent="MenuLayer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "QUIT"

[node name="VolumeLabel" type="Label" parent="MenuLayer/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="MenuLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[connection signal="pressed" from="MenuLayer/VBoxContainer/ButtonsContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuLayer/VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="MenuLayer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
